samples/_failures_safe/1761723004_b0b777_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc628cdc.c: In function ‘prim’:
./samples/SAFE/__tmp_dc628cdc.c:144:5: error: expected expression at end of input
  144 |     if (!
      |     ^~
./samples/SAFE/__tmp_dc628cdc.c:144:5: error: expected declaration or statement at end of input
